--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,7 +5,9 @@ body, html {
 }
 
 a, p,
-.dsq-comment-text {
+.dsq-comment-text,
+.dsq-commenter-name
+{
   font-family: 'Ubuntu', serif;
 }
 
